# tracking

./: .gitignore  requirements.txt
cuTest/: README.md  base_cpp  base_cu  base_example.cpp  base_example_thrust.cpp  base_example_thrust.cu  base_thrust  base_thrust_cpp  main.cpp  main.cu  main_cpp  main_cu
mmCode/: EdgeFeatureUtil.hpp  GraphCreationUtil.hpp  GraphCreatorWriterModuleTriplet.cpp  GraphCreatorWriterModuleTriplet.hpp
mmCuda/: CMakeLists.txt  compile.sh
mmCuda/apps/: main.cu
mmCuda/include/: cuda_kernels.h  datatypes.cuh  memoryscheduler.cuh  selection.cuh  triplet_finder.cuh  utility.cuh  utility.h
mmCuda/run/: doublet_iter_count_event1.txt  plot.py
mmCuda/scripts/: moduleMap.py  test.py
mmCuda/src/: compile.sh  cuda_kernels.cu  datatypes.cu  main.cu  memory_budget.py  memoryscheduler.cu  triplet_finder.cu  utility.cu
mmCuda/updates/common/include/: event.cuh
mmCuda/updates/device/: CMakeLists.txt
mmCuda/updates/device/include/: selection.cuh  triplet_finder.cuh
mmCuda/updates/device/src/: doublet_finder.cu  selection.cu  triplet_finder.cu
mmCuda/updates/host/: CMakeLists.txt
mmCuda/updates/host/src/: module_map_reader.cu
mmCuda_/: compile.sh
mmCuda_/include/: device_definitions.cuh  device_kernals.cuh  utility.cuh
mmCuda_/scripts/: memory_budget.py  processEvent.py
mmCuda_/src/: cuda_kernels.cu  device_kernals.cu  memoryscheduler.cu  utility.cu
mmCuda_/updates/: CMakeLists.txt
mmCuda_/updates/apps/: main.cu
mmCuda_/updates/common/: CMakeLists.txt
mmCuda_/updates/common/include/: coordinate_converters.cuh  module_map.cuh  utils.cuh
mmCuda_/updates/device/include/: doublet_finder.cuh  hit_containers.cuh
mmCuda_/updates/host/include/: event_reader.cuh  memory_scheduler.cuh  module_map_reader.cuh
mmCuda_/updates/host/src/: event_reader.cu  memory_scheduler.cu
